<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.onemfive</groupId>
        <artifactId>parent</artifactId>
        <version>0.6.3-SNAPSHOT</version>
    </parent>

	<artifactId>common</artifactId>

	<packaging>jar</packaging>

	<name>1m5-common</name>
	<url>https://1m5.io</url>
	<description>Invisible Matrix Services - Common</description>
	<inceptionYear>2020</inceptionYear>
	<licenses>
		<license>
			<name>Unlicense</name>
			<url>https://unlicense.org/</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>objectorange</name>
			<email>brian@resolvingarchitecture.io</email>
		</developer>
	</developers>
	<scm>
		<connection>scm:git@github.com/1m5/1m5</connection>
		<developerConnection>scm:git@github.com/1m5/1m5</developerConnection>
		<url>git@github.com/1m5/1m5</url>
	</scm>
	<profiles>
		<profile>
			<id>devnet</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<isTest>true</isTest>
			</properties>
		</profile>
		<profile>
			<id>testnet</id>
			<properties>
				<isTest>false</isTest>
			</properties>
		</profile>
		<profile>
			<id>mainnet</id>
			<properties>
				<isTest>false</isTest>
			</properties>
		</profile>
		<profile>
			<id>seed</id>
			<!-- Seed peers are set up to get newcomers onto the network quickly.-->
			<properties>
				<isTest>false</isTest>
			</properties>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencies>

	</dependencies>

	<build>
		<finalName>${project.name}-${project.version}</finalName>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
                    <include>**/*.json</include>
					<include>**/*.xml</include>
					<include>**/*.yml</include>
					<include>**/*.properties</include>
					<include>**/*.config</include>
					<include>**/*.txt</include>
					<include>**/*.crt</include>
					<include>**/*.png</include>
					<include>**/*.fxml</include>
					<include>**/*.css</include>
					<include>**/*.ttf</include>
					<include>**/*.otf</include>
				</includes>
			</resource>
		</resources>
		<pluginManagement>
			<plugins>
				<!--<plugin>-->
					<!--<groupId>org.apache.maven.plugins</groupId>-->
					<!--<artifactId>maven-project-info-reports-plugin</artifactId>-->
					<!--<version>2.8.1</version>-->
				<!--</plugin>-->
				<!--<plugin>-->
					<!--<groupId>org.apache.maven.plugins</groupId>-->
					<!--<artifactId>maven-assembly-plugin</artifactId>-->
					<!--<version>2.5.5</version>-->
				<!--</plugin>-->
				<!--<plugin>-->
					<!--<artifactId>maven-antrun-plugin</artifactId>-->
					<!--<version>1.8</version>-->
				<!--</plugin>-->
				<!--<plugin>-->
					<!--<artifactId>maven-dependency-plugin</artifactId>-->
					<!--<version>2.10</version>-->
				<!--</plugin>-->
				<!--<plugin>-->
					<!--<artifactId>maven-release-plugin</artifactId>-->
					<!--<version>2.5.2</version>-->
				<!--</plugin>-->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
                    <configuration>
                        <release>11</release>
                    </configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
<!--			<plugin>-->
<!--				<groupId>org.apache.maven.plugins</groupId>-->
<!--				<artifactId>maven-project-info-reports-plugin</artifactId>-->
<!--			</plugin>-->
		</plugins>
	</build>

	<!--<reporting>-->
		<!--<plugins>-->
			<!--<plugin>-->
				<!--<groupId>org.apache.maven.plugins</groupId>-->
				<!--<artifactId>maven-project-info-reports-plugin</artifactId>-->
				<!--<version>2.8.1</version>-->
				<!--<reportSets>-->
					<!--<reportSet>-->
						<!--<reports>-->
							<!--<report>dependencies</report>-->
							<!--<report>project-team</report>-->
							<!--&lt;!&ndash;<report>mailing-list</report> &ndash;&gt;-->
							<!--&lt;!&ndash;<report>cim</report> &ndash;&gt;-->
							<!--&lt;!&ndash;<report>issue-tracking</report> &ndash;&gt;-->
							<!--<report>license</report>-->
							<!--<report>scm</report>-->
						<!--</reports>-->
					<!--</reportSet>-->
				<!--</reportSets>-->
			<!--</plugin>-->
		<!--</plugins>-->
	<!--</reporting>-->

</project>
